[package]
name = "hoi_map_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
hoi4save = "0.3.4"
human-panic = "2.0.0"
image = "0.25.1"
indicatif = { version = "0.17.8", features = ["tokio"] }
jomini = "0.25.6"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
vtracer = "0.6.3"
